methods.basics.Methods.scala.error
Erreur de compilation :
Methods:7: error: not found: value a
      a == a + 1
      ^Methods:7: error: not found: value a
      a == a + 1
           ^